kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vcf-services
  labels:
    app.kubernetes.io/name: vcf-services
